# mosaic

./: .gitignore  Cargo.toml  LICENSE  README.md  a.out  bench  bench.s  bench.ssa  crlif  install.sh  profile.json
.fleet/: settings.json
.github/ISSUE_TEMPLATE/: something-is-messed-up.md  something-to-add.md
.github/workflows/: rust.yml
boostrapped/: exaaaaaaample.msc  file.msc  logging.msc  main  main.msc
docs/: hugo.toml
docs/content/docs/: Data Types.md  Hello, World!.md  Hidden Allocations.md  Mosaic.md  Structures and Enums.md
docs/docsrc/.obsidian/: appearance.json  core-plugins.json  workspace.json
docs/public/: 404.html  index.html  index.xml  sitemap.xml
docs/public/ananke/css/: main.css.map
docs/public/categories/: index.html  index.xml
docs/public/docs/: index.html  index.xml
docs/public/docs/data-types/: index.html
docs/public/docs/hello-world/: index.html
docs/public/docs/mosaic/: index.html
docs/public/posts/: index.html  index.xml
docs/public/posts/mosaic/: index.html
docs/public/tags/: index.html  index.xml
docs/src/: Build System.md  Data Types.md  Functions.md  Hello, World!.md  Installation.md  Naming Conventions.md  Pointers.md  String Formatting.md  Structs.md  Type Bounds.md  Type System.md  Variables.md  compilation.md  hello_world.md  index.md  mosaic.md  pointers.md  types.md
docs/src/.obsidian/: workspace.json
docs/src/Package Manager/: Format.md
examples/: bench  bench.mosaic  config.toml  enum.msc  hello.msc  main.mosaicui.xml  process.msc  window.mosaic
examples/engine/: engine.msc  main.msc
icons/: mosaic.afdesign
lib/: external.msc  external.ssa
mosaic-pm/: Cargo.toml  wrangler.toml
mosaic-pm/src/: config.rs  lib.rs
src/: cli.rs  errors.rs  file.rs  lexer.rs  macros.rs  main.rs  parser.rs  reader.rs  schema.capnp  schema_capnp.rs  scope.rs  states.rs  tokens.rs  utils.rs
src/BEVM/: Cargo.toml
src/BEVM/src/: instructions.rs  lib.rs
src/compiler/: align.rs  errors.rs  identifiers.rs  linker.rs  mod.rs  traits.rs  types.rs
src/compiler/analyser/: mod.rs  preopt.rs
src/compiler/cranelift/: builders.rs  errors.rs  indexing.rs  linker.rs  mangle.rs  meta.rs  mod.rs  module.rs  trace.rs  types.rs  value.rs
src/compiler/qbe/: errors.rs  linker.rs  mangler.rs  mod.rs  modules.rs  types.rs  values.rs
src/runtime/: eval.rs  mod.rs  types.rs  values.rs
tests/: arrays-and-vectors.msc  bench.msc  fiveletterwords.msc  fnptr  fnptr.msc
