[package]
name = "mosaic-lang"
version = "0.0.2-beta.2"
edition = "2021"
authors = ["Lucas Plumb"]
keywords = ["compiler", "Mosaic"]
readme = "README.md"
rust-version = "1.80.0"
license-file = "LICENSE"
description = "A compiler for Mosaic."
categories = ["compilers"]
publish = true
repository = "https://github.com/ljp-projects/mosaic"

[[bin]]
name = "msc"
path = "src/main.rs"

[profile.dev]
incremental = true
panic = "unwind"

[profile.bench]
lto = "fat"
overflow-checks = false
opt-level = 3
incremental = true
debug-assertions = false
debug = "line-tables-only"

[profile.release]
lto = "fat"
overflow-checks = false
opt-level = 3
incremental = true
debug-assertions = false
debug = "line-tables-only"
panic = "abort"

[dependencies]
cranelift-codegen = { version = "0.115.0", features = ["all-arch"] }
cranelift-module = "0.115.0"
cranelift-object = "0.115.0"
cranelift-native = "0.115.0"
cranelift-frontend = "0.115.0"
colored = "2.2.0"
clap = { version = "4.5.23", features = ["derive"] }