[package]
name = "mosaic-lang"
version = "0.0.2"
edition = "2021"
authors = ["Lucas Plumb"]
keywords = ["compiler", "Mosaic"]
readme = "README.md"
rust-version = "1.80.0"
license-file = "LICENSE"
description = "A compiler for Mosaic."
categories = ["compilers"]
publish = true
repository = "https://github.com/ljp-projects/mosaic"

[[bin]]
name = "msc"
path = "src/main.rs"

[profile.dev]
incremental = true
panic = "unwind"

[profile.bench]
lto = "fat"
overflow-checks = false
opt-level = 3
incremental = true
debug-assertions = false
debug = "line-tables-only"

[profile.release]
lto = "fat"
overflow-checks = false
opt-level = "z"
incremental = true
debug-assertions = false
debug = "line-tables-only"
panic = "abort"
rpath = true
strip = true

[profile.release.package."*"]
overflow-checks = false
opt-level = "z"
incremental = true
debug-assertions = false
debug = "line-tables-only"

[profile.release.build-override]
overflow-checks = false
opt-level = "z"
incremental = true
debug-assertions = false
debug = "line-tables-only"


[dependencies]
cranelift-codegen = { version = "0.118.0", features = ["all-native-arch", "x86", "arm64", "incremental-cache", "all-arch", "riscv64", "std"] }
cranelift-module = { version = "0.118.0", features = ["std"] }
cranelift-object = "0.118.0"
cranelift-interpreter = { version = "0.118.0" }
cranelift-frontend = { version = "0.118.0", features = ["std"] }
colored = "3.0.0"
clap = { version = "4.5.29", features = ["derive"] }
either = "1.13.0"
tokio = { version = "1.43.0", features = ["rt", "rt-multi-thread", "macros"] }
downcast-rs = "2.0.1"
target-lexicon = "0.13.2"
mmap-rs = "0.6.1"
homedir = "0.3.4"
